Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,11 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create database connection here"
+    "# create database connection here\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect('pets_database.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -97,11 +100,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select all data from cats data here"
+    "# select all data from cats data here\n",
+    "c.execute(\"\"\"SELECT * FROM cats;\"\"\").fetchall()"
    ]
   },
   {
@@ -141,11 +161,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, None, None, 'Tabby', None),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (4, 'Moe', 10, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select all cats order by age here"
+    "# select all cats order by age here\n",
+    "c.execute(\"\"\"SELECT * FROM cats ORDER BY age;\"\"\").fetchall()"
    ]
   },
   {
@@ -177,11 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 'Moe', 10, 'Tabby', None),\n",
+       " (3, \"Lil' Bub\", 5, 'American Shorthair', None),\n",
+       " (1, 'Maru', 3, 'Scottish Fold', 1),\n",
+       " (5, 'Patches', 2, 'Calico', None),\n",
+       " (2, 'Hana', 1, 'Tabby', 1),\n",
+       " (6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats order by age descending here"
+    "# select cats order by age descending here\n",
+    "c.execute(\"\"\"SELECT * FROM cats ORDER BY age DESC;\"\"\").fetchall()"
    ]
   },
   {
@@ -219,13 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 'Moe', 10, 'Tabby', None)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()\n",
     "# OR\n",
-    "# c.execute('''SELECT * FROM cats ORDER BY age DESC;''').fetchone() # returns the same element as the above"
+    "# c.execute('''SELECT * FROM cats ORDER BY age DESC;''').fetchone() # returns the same element as the above\n"
    ]
   },
   {
@@ -248,11 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 'Moe', 10, 'Tabby', None), (3, \"Lil' Bub\", 5, 'American Shorthair', None)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select the two oldest cats here"
+    "# select the two oldest cats here\n",
+    "c.execute(\"SELECT * FROM cats ORDER BY age DESC LIMIT 2;\").fetchall()\n"
    ]
   },
   {
@@ -287,11 +364,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Maru',), ('Hana',), ('Patches',)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# find all records between ages 1 and three here"
+    "# find all records between ages 1 and three here\n",
+    "c.execute(\"\"\"Select name FROM cats WHERE age BETWEEN 1 AND 3\"\"\").fetchall()"
    ]
   },
   {
@@ -320,11 +409,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(6, None, None, 'Tabby', None)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select cats where the name field is null here"
+    "# select cats where the name field is null here\n",
+    "c.execute(\"\"\"select * from cats where Name is null\"\"\").fetchall()"
    ]
   },
   {
@@ -362,11 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2,)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# retrieve the count of cats whose owner id = 1 here"
+    "# retrieve the count of cats whose owner id = 1 here\n",
+    "c.execute(\"\"\"select count(owner_id) from cats where owner_id = 1;\"\"\").fetchall()"
    ]
   },
   {
@@ -414,11 +527,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('American Shorthair', 1), ('Calico', 1), ('Scottish Fold', 1), ('Tabby', 3)]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# execute GROUP BY sql statement here"
+    "# execute GROUP BY sql statement here\n",
+    "c.execute(\"\"\"select breed, count(breed) from cats group by breed;\"\"\").fetchall()"
    ]
   },
   {
@@ -441,13 +566,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('American Shorthair', None, 1),\n",
+       " ('Calico', None, 1),\n",
+       " ('Scottish Fold', 1, 1),\n",
+       " ('Tabby', None, 2),\n",
+       " ('Tabby', 1, 1)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# execute multiple column group by statement here"
+    "# execute multiple column group by statement here\n",
+    "c.execute(\"\"\"select breed, owner_id, count(breed) from cats group by breed, owner_id\"\"\").fetchall()"
    ]
   },
   {
@@ -548,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
